JS-293: + - isn't see on dark background

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -916,7 +916,7 @@
     .fotorama__video-play:not(:focus),
     .fotorama__video-close:not(:focus) {
         transition-duration: @fotorama-duration-time;
-        transition-property: transform, opacity;
+        transition-property: transform, opacity, background-color;
     }
 }
 
@@ -1280,7 +1280,7 @@
         background-color: rgba(255, 255, 255, 0.5);
     }
     &:active {
-        background-color: #d5d5d5;
+        background-color: rgba(213, 213, 213, 0.5);
     }
 }
 
