MAGETWO-45088: Empty space is displayed on "Advanced Search Results" Storefront page

--- a/app/design/frontend/Magento/luma/Magento_AdvancedSearch/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_AdvancedSearch/web/css/source/_module.less
@@ -23,6 +23,10 @@
     }
 }
 
+//
+// Desktop
+// _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__s) {
     .catalogsearch-advanced-result {
         .message {
