MAGETWO-45088: Empty space is displayed on "Advanced Search Results" Storefront page

--- a/app/design/frontend/Magento/luma/Magento_AdvancedSearch/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_AdvancedSearch/web/css/source/_module.less
@@ -13,6 +13,10 @@
 // If Advanced Search returns no results, controls do not appear, and visual gap appears.
 // We compensate it with negative top margin applied to '.message.error' on Mobile screens.
 
+//
+// Common
+// _____________________________________________
+
 & when (@media-common = true) {
     .catalogsearch-advanced-result {
         .message {
