MAGETWO-42814: [UI] Closed and Upcoming Events are displayed unbelievably giant on mobile devices

--- a/app/design/frontend/Magento/blank/Magento_CatalogEvent/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_CatalogEvent/web/css/source/_module.less
@@ -73,7 +73,7 @@
         }
 
         .start {
-            padding-right: 40px;
+            padding-right: @indent__xl;
             position: relative;
 
             &:after {
@@ -130,7 +130,7 @@
             }
 
             .start {
-                padding-right: 50px;
+                padding-right: @indent__xl + 10px;
 
                 &:after {
                     .lib-font-size(50);
