MAGETWO-42814: [UI] Closed and Upcoming Events are displayed unbelievably giant on mobile devices

--- a/app/design/frontend/Magento/blank/Magento_CatalogEvent/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_CatalogEvent/web/css/source/_module.less
@@ -130,7 +130,7 @@
             }
 
             .start {
-                padding-right: @indent__xl + 10px;
+                padding-right: 50px;
 
                 &:after {
                     .lib-font-size(50);
