--- a/lib/web/css/source/lib/_tables.less
+++ b/lib/web/css/source/lib/_tables.less
@@ -400,7 +400,7 @@
         @_table-responsive-cell-padding: @_table-responsive-cell-padding
     );
     > tbody > tr > th {
-        background-color: @_table-th-background-color-responsive !important;
+        .lib-css(background-color, @_table-th-background-color-responsive ~'!important');
     }
 }
 
@@ -435,7 +435,7 @@
         @_table-responsive-cell-padding: @_table-responsive-cell-padding
     );
     > tbody > tr > th {
-        background-color: @_table-th-background-color-responsive !important;
+        .lib-css(background-color, @_table-th-background-color-responsive ~'!important');
     }
 }
 
