--- a/lib/web/css/source/components/_modals.less
+++ b/lib/web/css/source/components/_modals.less
@@ -56,16 +56,16 @@
         }
     }
     .modal-inner-wrap {
-        background-color: @modal__background-color;
-        box-shadow: @modal__box-shadow;
+        .lib-css(background-color, @modal__background-color);
+        .lib-css(box-shadow, @modal__box-shadow);
         opacity: 1;
         pointer-events: auto;
     }
 }
 
 .lib-modal-slide() {
-    left: @modal-slide__first__indent-left;
-    z-index: @modal-slide__z-index;
+    .lib-css(left, @modal-slide__first__indent-left);
+    .lib-css(z-index, @modal-slide__z-index);
     &._show {
         .modal-inner-wrap {
             -webkit-transform: translateX(0);
@@ -89,7 +89,7 @@
 .lib-modal-popup() {
     left: 0;
     overflow-y: auto;
-    z-index: @modal-popup__z-index;
+    .lib-css(z-index, @modal-popup__z-index);
     &._show {
         .modal-inner-wrap {
             -webkit-transform: translateY(0);
@@ -100,7 +100,7 @@
         box-sizing: border-box;
         height: auto;
         left: 0;
-        margin: @modal-popup__indent-vertical auto;
+        .lib-css(margin, @modal-popup__indent-vertical auto);
         position: absolute;
         right: 0;
         -webkit-transform: translateY(-200%);
@@ -111,7 +111,7 @@
         transition-timing-function: ease;
         .lib-vendor-prefix-display(flex);
         .lib-vendor-prefix-flex-direction(column);
-        width: @modal-popup__width;
+        .lib-css(width, @modal-popup__width);
     }
 }
 
@@ -129,7 +129,7 @@ body {
 
 .modals-overlay {
     &:extend(.abs-modal-overlay all);
-    z-index: @overlay__z-index;
+    .lib-css(z-index, @overlay__z-index);
 }
 
 .modal-slide,
@@ -160,11 +160,11 @@ body {
     .modal-header,
     .modal-content,
     .modal-footer {
-        padding: 0 @modal-slide__padding @modal-slide__padding;
+        .lib-css(padding, 0 @modal-slide__padding @modal-slide__padding);
     }
     .modal-header {
-        padding-bottom: @modal-slide-header__padding-vertical;
-        padding-top: @modal-slide-header__padding-vertical;
+        .lib-css(padding-bottom, @modal-slide-header__padding-vertical);
+        .lib-css(padding-top, @modal-slide-header__padding-vertical);
     }
 }
 
@@ -191,8 +191,8 @@ body {
     .modal-header,
     .modal-content,
     .modal-footer {
-        padding-left: @modal-popup__padding;
-        padding-right: @modal-popup__padding;
+        .lib-css(padding-left, @modal-popup__padding);
+        .lib-css(padding-right, @modal-popup__padding);
     }
     .modal-header,
     .modal-footer {
@@ -200,13 +200,13 @@ body {
         .lib-vendor-prefix-flex-shrink(0);
     }
     .modal-header {
-        padding-bottom: @modal-popup__padding / 2.5;
-        padding-top: @modal-popup__padding;
+        .lib-css(padding-bottom, @modal-popup__padding / 2.5);
+        .lib-css(padding-top, @modal-popup__padding);
     }
     .modal-footer {
         margin-top: auto;
-        padding-bottom: @modal-popup__padding;
-        padding-top: @modal-popup__padding;
+        .lib-css(padding-bottom, @modal-popup__padding);
+        .lib-css(padding-top, @modal-popup__padding);
     }
     .modal-footer-actions {
         text-align: right;
