--- a/lib/web/css/source/lib/_grids.less
+++ b/lib/web/css/source/lib/_grids.less
@@ -173,7 +173,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)) / @grid-width);
-    padding-left: @calc-column-width;
+    .lib-css(padding-left, @calc-column-width);
 }
 
 .lib-post-pad(
@@ -181,7 +181,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)) / @grid-width);
-    padding-right: @calc-column-width;
+    .lib-css(padding-right, @calc-column-width);
 }
 
 .lib-pre-push(
@@ -189,7 +189,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)) / @grid-width);
-    margin-left: @calc-column-width;
+    .lib-css(margin-left, @calc-column-width);
 }
 
 .lib-post-push(
@@ -197,7 +197,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)+@gutter-width) / @grid-width);
-    margin-right: @calc-column-width;
+    .lib-css(margin-right, @calc-column-width);
 }
 
 .lib-post-push-end(
@@ -205,7 +205,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)) / @grid-width);
-    margin-right: @calc-column-width;
+    .lib-css(margin-right, @calc-column-width);
 }
 
 .lib-column-width(
@@ -213,7 +213,7 @@
     @total-columns: @total-columns
 ) {
     @calc-column-width: 100%*((((@gutter-width+@column-width)*@span)-@gutter-width) / @grid-width);
-    width: @calc-column-width;
+    .lib-css(width, @calc-column-width);
 }
 
 .lib-column-gutter(
@@ -228,5 +228,5 @@
     @end-column: false
 ) when not (@end-column) {
     @calc-gutter-width: 100%*(@gutter-width/@grid-width);
-    margin-right: @calc-gutter-width;
+    .lib-css(margin-right, @calc-gutter-width);
 }
