--- a/lib/web/css/source/lib/_icons.less
+++ b/lib/web/css/source/lib/_icons.less
@@ -287,15 +287,20 @@
     @_icon-image-position-x,
     @_icon-image-position-y
 ) {
+    .lib-url-check(@_icon-image);
+
     .lib-css(line-height, @_icon-image-height);
     .lib-css(margin, @_icon-image-margin);
     .lib-css(vertical-align, @_icon-image-vertical-align);
-    background: url(@_icon-image) no-repeat @_icon-image-position-x @_icon-image-position-y;
+    .lib-css(background-image, @lib-url-check-output);
+    background-position-x: @_icon-image-position-x;
+    background-position-y: @_icon-image-position-y;
+    background-repeat: no-repeat;
     content: '';
     display: inline-block;
     ._lib-icon-image-size(
-    @_icon-image-width,
-    @_icon-image-height
+        @_icon-image-width,
+        @_icon-image-height
     );
 }
 
@@ -303,7 +308,7 @@
     @_icon-image-position-x,
     @_icon-image-position-y
 ) {
-    background-position: @_icon-image-position-x @_icon-image-position-y;
+    .lib-css(background-position, @_icon-image-position-x @_icon-image-position-y);
 }
 
 ._lib-icon-image-size(
@@ -319,7 +324,7 @@
     @_icon-sprite-position-y,
     @_icon-sprite-grid
 ) {
-    background-position: -(@_icon-sprite-position-x*@_icon-sprite-grid) -(@_icon-sprite-position-y*@_icon-sprite-grid);
+    .lib-css(background-position, -(@_icon-sprite-position-x*@_icon-sprite-grid) -(@_icon-sprite-position-y*@_icon-sprite-grid));
 }
 
 ._lib-icon-font(
