--- a/lib/web/css/source/lib/_navigation.less
+++ b/lib/web/css/source/lib/_navigation.less
@@ -103,7 +103,7 @@
                 }
             }
             > .level1 {
-                font-weight: @font-weight__semibold;
+                .lib-css(font-weight, @font-weight__semibold);
             }
             &.active,
             &.has-active { // ToDo UI: remove "has_active" here, when mobile navigation default open state is implemented
@@ -115,7 +115,7 @@
                     .lib-css(color, @_nav-level0-item-color-active);
                     .lib-css(text-decoration, @_nav-level0-item-text-decoration-active);
                     span:not(.ui-menu-icon) {
-                        margin-left: -@_submenu-item__active__border;
+                        .lib-css(margin-left, -@_submenu-item__active__border);
                     }
                 }
             }
@@ -143,7 +143,7 @@
                 transition: left .3s ease-out;
                 > li {
                     > a {
-                        padding-left: @_nav__indent-side;
+                        .lib-css(padding-left, @_nav__indent-side);
                     }
                     &:last-child {
                         margin-bottom: 0;
@@ -183,7 +183,7 @@
                 .level1 {
                     &.active {
                         > a {
-                            padding-left: @_nav__indent-side - @_submenu-item__active__border;
+                            .lib-css(padding-left, @_nav__indent-side - @_submenu-item__active__border);
                         }
                     }
                 }
