--- a/lib/web/css/source/lib/_typography.less
+++ b/lib/web/css/source/lib/_typography.less
@@ -28,26 +28,26 @@
 
 //  Rem font size
 .lib-font-size(@sizeValue) when not (ispercentage(@sizeValue)) and not (@sizeValue = false) and (isunit(@sizeValue, @font-size-unit)) {
-    font-size: @sizeValue;
+    .lib-css(font-size, @sizeValue);
 }
 
 .lib-font-size(@sizeValue) when not (ispercentage(@sizeValue)) and not (@sizeValue = false) and (isunit(@sizeValue, em)) {
-    font-size: @sizeValue;
+    .lib-css(font-size, @sizeValue);
 }
 
 .lib-font-size(@sizeValue) when not (ispercentage(@sizeValue)) and not (@sizeValue = false) and not (isunit(@sizeValue, em)) and not (isunit(@sizeValue, @font-size-unit)) {
     .lib-font-size-value(@sizeValue);
-    font-size: @fontValue;
+    .lib-css(font-size, @fontValue);
 }
 
 //  Rem line height
 .lib-line-height(@heightValue) when not (@heightValue = false) and not (ispercentage(@heightValue)) {
     .lib-font-size-value(@heightValue);
-    line-height: @fontValue;
+    .lib-css(line-height, @fontValue);
 }
 
 .lib-line-height(@heightValue) when (ispercentage(@heightValue)) and not (@heightValue = false) {
-    line-height: @heightValue;
+    .lib-css(line-height, @heightValue);
 }
 
 .lib-wrap-words() {
@@ -153,11 +153,11 @@
     );
     & {
         .lib-font-size-value(@@_margin-top);
-        margin-top: @fontValue;
+        .lib-css(margin-top, @fontValue);
     }
     & {
         .lib-font-size-value(@@_margin-bottom);
-        margin-bottom: @fontValue;
+        .lib-css(margin-bottom, @fontValue);
     }
 }
 
@@ -179,11 +179,11 @@
     p {
         & {
             .lib-font-size-value(@p__margin-top);
-            margin-top: @fontValue;
+            .lib-css(margin-top, @fontValue);
         }
         & {
             .lib-font-size-value(@p__margin-bottom);
-            margin-bottom: @fontValue;
+            .lib-css(margin-bottom, @fontValue);
         }
     }
 
@@ -300,21 +300,21 @@
     ol {
         & {
             .lib-font-size-value(@list__margin-top);
-            margin-top: @fontValue;
+            .lib-css(margin-top, @fontValue);
         }
         & {
             .lib-font-size-value(@list__margin-bottom);
-            margin-bottom: @fontValue;
+            .lib-css(margin-bottom, @fontValue);
         }
         //.lib-typography(@list__font-size__base, @list__color__base);
         > li {
             & {
                 .lib-font-size-value(@list-item__margin-top);
-                margin-top: @fontValue;
+                .lib-css(margin-top, @fontValue);
             }
             & {
                 .lib-font-size-value(@list-item__margin-bottom);
-                margin-bottom: @fontValue;
+                .lib-css(margin-bottom, @fontValue);
             }
         }
         ul,
