--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -3,17 +3,12 @@
 // * See COPYING.txt for license details.
 // */
 
-@fotorama-duration-time: 0.3s;
-@fotorama-arw-size: 95px;
-@fotorama_close_size: 30px;
-@size-fotorama-block: 80px;
-@fotorama-thumb-arrow: 30px;
-@fotorama-fullscreen-zoom-time: 0.3s;
-
+@import 'module/_variables.less'; //Default gallery variables
 @import '../../css/source/lib/_lib.less'; // Global lib
 @import '../../css/source/_theme.less'; // Theme overrides
 @import '../../css/source/_variables.less'; // Local theme variables
 @import '../../css/source/lib/_responsive.less';
+@import 'module/_mixins.less'; //Mixins in gallery
 
 .fotorama_spin {
     display: none;
@@ -30,44 +25,6 @@
         top: 0;
         z-index: @z-index-1;
     }
-}
-
-.fotorama-translate3d(@x; @y; @z) {
-    -webkit-transform: translate3d(@x, @y, @z);
-    transform: translate3d(@x, @y, @z);
-}
-
-.fotorama-rotate (@deg) {
-    -webkit-transform: rotate(@deg);
-    -ms-transform: rotate(@deg);
-    transform: rotate(@deg);
-}
-
-.translateX(@value) {
-    -webkit-transform: translateX(@value);
-    -ms-transform: translateX(@value);
-    -o-transform: translateX(@value);
-    transform: translateX(@value);
-}
-
-.translateY(@value) {
-    -webkit-transform: translateY(@value);
-    -ms-transform: translateY(@value);
-    -o-transform: translateY(@value);
-    transform: translateY(@value);
-}
-
-.fotorama-shadow-gradient(@x, @y) {
-    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.2) 25%, rgba(0, 0, 0, 0.3) 75%, transparent), radial-gradient(farthest-side at @x @y, rgba(0, 0, 0, 0.4), transparent);
-}
-
-.fotorama-inline-block(@va: middle) {
-    *display: inline;
-    *zoom: 1;
-    -moz-box-orient: vertical;
-    display: -moz-inline-box;
-    display: inline-block;
-    vertical-align: @va;
 }
 
 .fotorama__zoom-in,
