--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -9,6 +9,7 @@
 @import '../../css/source/_variables.less'; // Local theme variables
 @import '../../css/source/lib/_responsive.less';
 @import 'module/_mixins.less'; //Mixins in gallery
+@import 'module/_extends.less';
 
 .fotorama_spin {
     display: none;
@@ -31,213 +32,6 @@
 .fotorama__zoom-out {
     display: none;
 }
-.fotorama__fullscreen {
-    .fotorama__zoom-in,
-    .fotorama__zoom-out {
-        overflow: hidden;
-        position: absolute;
-        width: @size-fotorama-block;
-        height: @size-fotorama-block;
-        display: block;
-        cursor: pointer;
-
-    }
-    .fotorama__zoom-out {
-        top: 83px;
-        &:extend(.fotorama-sprite);
-        background-position: 0 (-@size-fotorama-block) !important;
-        &.fotorama__zoom-out--disabled {
-            display: none
-        }
-    }
-    .fotorama__zoom-in {
-        top: 2px;
-        &:extend(.fotorama-sprite);
-        background-position: 0 0 !important;
-        &.fotorama__zoom-in--disabled {
-            display: none
-        }
-    }
-}
-
-.fotorama-stretch {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-}
-
-.fotorama-grab-cursor {
-    cursor: move;
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
-    cursor: -o-grab;
-    cursor: -ms-grab;
-    cursor: grab;
-}
-
-.fotorama-grabbing-cursor {
-    cursor: move;
-    cursor: -webkit-grabbing;
-    cursor: -moz-grabbing;
-    cursor: -o-grabbing;
-    cursor: -ms-grabbing;
-    cursor: grabbing;
-}
-
-.fotorama-gpu {
-    transform: translateZ(0);
-}
-
-.fotorama-focus {
-    outline: 0;
-}
-
-.fotorama-focus-overlay {
-    &:after {
-        &:extend(.fotorama-stretch);
-        background-color: @color-blue2;
-        border-radius: inherit;
-        content: '';
-    }
-}
-
-.fotorama__fullscreen-icon:focus,
-.fotorama__zoom-out:focus,
-.fotorama__zoom-in:focus {
-    box-shadow:@focus__box-shadow;
-}
-
-.fotorama__arr:focus:after,
-.fotorama__stage__shaft:focus:after,
-.fotorama__nav__frame--thumb:focus .fotorama__thumb:after,
-.fotorama__nav__frame--dot:focus .fotorama__dot:after{
-    box-shadow: @focus__box-shadow;
-    border-radius: inherit;
-    content: '';
-    position: absolute;
-    left: 3px;
-    top: 3px;
-    bottom: 3px;
-    right: 3px;
-    z-index: 10;
-}
-.fotorama__nav__frame--thumb:focus,
-.fotorama__nav__frame--dot:focus {
-    .fotorama__thumb:after,
-    .fotorama__dot:after{
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-    }
-    .fotorama__thumb.fotorama_vertical_ratio:after {
-        left: 2px;
-        right: 2px;
-    }
-    .fotorama__thumb {
-        overflow: inherit;
-    }
-}
-
-.fotorama__nav__frame:nth-child(2):focus {
-    .fotorama__thumb:after{
-        left: 1px;
-    }
-    .fotorama__thumb.fotorama_vertical_ratio:after{
-        top: 1px;
-    }
-}
-
-.fotorama__nav__frame:last-child:focus {
-    .fotorama__thumb:after{
-        right: 1px;
-    }
-    .fotorama__thumb.fotorama_vertical_ratio:after{
-        bottom: 1px;
-    }
-}
-
-.fotorama-transform-disabled {
-    transform: none !important;
-}
-
-.fotorama-transition-for-slide {
-    transition-duration: 0ms;
-    transition-property: transform, width;
-    transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1);
-}
-
-.fotorama-no-select {
-    user-select: none;
-}
-
-.fotorama-select {
-    user-select: text;
-}
-
-.fotorama-empty-bg {
-    background: url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=);
-}
-
-.fotorama-auto-margin {
-    margin: auto;
-    padding: 0;
-}
-
-.fotorama-inline-block {
-    .fotorama-inline-block();
-}
-
-.fotorama-content-box {
-    box-sizing: content-box;
-}
-
-.fotorama-border-box {
-    box-sizing: border-box;
-}
-
-.fotorama-hidden {
-    left: -99999px;
-    position: absolute;
-    top: -99999px;
-    z-index: -@z-index-10;
-}
-
-.fotorama-visible {
-    left: auto;
-    opacity: 1;
-    position: relative;
-    top: auto;
-    z-index: auto;
-}
-
-.fotorama-no-tap {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.transitionDuration {
-    transition-duration: 333ms;
-}
-
-.transitionDurationZero {
-    transition-duration: 0ms;
-}
-
-.fotorama-sprite {
-    &:extend(.fotorama-print-background);
-    background-image: url('gallery.png');
-    background-repeat: no-repeat;
-}
-
-.fotorama-print-background {
-    @media print {
-        background: none !important;
-    }
-}
 
 .fotorama {
     min-width: 1px;
@@ -248,14 +42,14 @@
     background: @color-white;
     bottom: 0 !important;
     float: none !important;
-    height: 100% !important;
     left: 0 !important;
     margin: 0 !important;
-    position: absolute !important;
+    position: fixed !important;
     right: 0 !important;
     top: 0 !important;
     width: 100% !important;
     z-index: @z-index-10 !important;
+    &:extend(.fotorama-gpu);
     .fotorama__wrap {
         max-width: 100% !important;
     }
@@ -1217,16 +1011,6 @@
     }
     .loader img {
       position: absolute;
-    }
-}
-
-.fotorama__fullscreen {
-    overflow-y: hidden;
-    .magnify-fullimage {
-        display: inline-block;
-    }
-    .magnify-lens {
-        display: none !important;
     }
 }
 
