JS-316: Incorrect behaviour of zoom

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -888,7 +888,7 @@
             }
             &.fotorama__img--draggable {
                 cursor: move;
-                transition-property: width, height;
+                transition-property: none;
             }
         }
     }
