--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -10,6 +10,8 @@
 @import '../../css/source/lib/_responsive.less';
 @import 'module/_mixins.less'; //Mixins in gallery
 @import 'module/_extends.less';
+@import 'module/_focus.less';
+@import 'module/_fullscreen.less';
 
 .fotorama_spin {
     display: none;
@@ -36,23 +38,6 @@
 .fotorama {
     min-width: 1px;
     overflow: hidden;
-}
-
-.fotorama--fullscreen {
-    background: @color-white;
-    bottom: 0 !important;
-    float: none !important;
-    left: 0 !important;
-    margin: 0 !important;
-    position: fixed !important;
-    right: 0 !important;
-    top: 0 !important;
-    width: 100% !important;
-    z-index: @z-index-10 !important;
-    &:extend(.fotorama-gpu);
-    .fotorama__wrap {
-        max-width: 100% !important;
-    }
 }
 
 .fotorama__wrap {
@@ -152,15 +137,6 @@
 
 .fotorama__img--full {
     display: none;
-}
-
-.fotorama--fullscreen .fotorama__loaded--full {
-    .fotorama__img {
-        display: none;
-    }
-    .fotorama__img--full {
-        display: block;
-    }
 }
 
 .fotorama__html {
@@ -1027,13 +1003,3 @@
     }
 }
 
-.fotorama-button-background() {
-    background-color: rgba(255, 255, 255, 0.3);
-    transition: background-color @fotorama-duration-time ease-in-out;
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.5);
-    }
-    &:active {
-        background-color: rgba(213, 213, 213, 0.5);
-    }
-}
