--- a/lib/web/mage/gallery/module/_fullscreen.less
+++ b/lib/web/mage/gallery/module/_fullscreen.less
@@ -1,10 +1,29 @@
 // /**
-// * Copyright © 2015 Magento. All rights reserved.
+// * Copyright Â© 2015 Magento. All rights reserved.
 // * See COPYING.txt for license details.
 // */
 
+.fotorama--fullscreen {
+    background: @color-white;
+    bottom: 0 !important;
+    float: none !important;
+    left: 0 !important;
+    margin: 0 !important;
+    position: fixed !important;
+    right: 0 !important;
+    top: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: @z-index-10 !important;
+    &:extend(.fotorama-gpu);
+    .fotorama__wrap {
+        max-width: 100% !important;
+    }
+}
+
 .fotorama__fullscreen {
     overflow: hidden;
+    position: relative;
     .fotorama__zoom-in,
     .fotorama__zoom-out {
         overflow: hidden;
@@ -30,5 +49,14 @@
         &.fotorama__zoom-in--disabled {
             display: none
         }
+    }
+}
+
+.fotorama--fullscreen .fotorama__loaded--full {
+    .fotorama__img {
+        display: none;
+    }
+    .fotorama__img--full {
+        display: block;
     }
 }
