JS-311: Fullscreen wrapper position
- Fix border on focus

--- a/lib/web/mage/gallery/module/_focus.less
+++ b/lib/web/mage/gallery/module/_focus.less
@@ -9,6 +9,10 @@
     box-shadow:@focus__box-shadow;
 }
 
+.fotorama__arr:focus {
+    box-shadow: none;
+}
+
 .fotorama__arr:focus:after,
 .fotorama__stage__shaft:focus:after,
 .fotorama__nav__frame--thumb:focus .fotorama__thumb:after,
