MAGETWO-45842: Remove icon in product compare not displayed correctly

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
@@ -819,6 +819,7 @@ body.catalog-product-compare-index {
 
             .action.delete {
                 &:extend(.abs-remove-button-for-blocks all);
+                margin-right: .6rem;
             }
         }
     }
