--- a/app/code/Magento/Ui/view/base/web/templates/area.html
+++ b/app/code/Magento/Ui/view/base/web/templates/area.html
@@ -4,10 +4,4 @@
  * See COPYING.txt for license details.
  */
 -->
-<!-- ko if: wasActivated -->
-    <div data-bind="visible: active">
-        <!-- ko foreach: elems -->
-            <!-- ko template: getTemplate() --><!-- /ko -->
-        <!-- /ko -->
-    </div>
-<!-- /ko -->
+<div if="wasActivated" each="elems" visible="active" render=""/>
