--- a/app/code/Magento/Ui/view/base/web/templates/form/fieldset.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/fieldset.html
@@ -5,22 +5,13 @@
  */
 -->
 
-<div
-        class="admin__fieldset-wrapper"
-        data-bind="css: {'admin__collapsible-block-wrapper': collapsible, 'opened': opened}">
-    <div
-            class="admin__fieldset-wrapper-title"
-            tabindex="3"
-            data-bind="click: toggleOpened, keyboard: { 13: toggleOpened }">
+<div class="admin__fieldset-wrapper" css="'admin__collapsible-block-wrapper': collapsible, opened: opened">
+    <div class="admin__fieldset-wrapper-title" tabindex="3" click="toggleOpened" keyboard="13: toggleOpened">
         <strong class="title">
-            <span data-bind="text: label"></span>
+            <span text="label"/>
         </strong>
     </div>
-    <div class="admin__fieldset-wrapper-content" data-bind="visible: opened">
-        <fieldset class="admin__fieldset">
-            <!-- ko foreach: { data: elems, as: 'element' } -->
-            <!-- ko template: element.getTemplate() --><!-- /ko -->
-            <!-- /ko -->
-        </fieldset>
+    <div class="admin__fieldset-wrapper-content" visible="opened">
+        <fieldset class="admin__fieldset" each="data: elems, as: 'element'" render=""/>
     </div>
 </div>
