--- a/app/code/Magento/Ui/view/base/web/templates/grid/filters/field.html
+++ b/app/code/Magento/Ui/view/base/web/templates/grid/filters/field.html
@@ -4,7 +4,7 @@
  * See COPYING.txt for license details.
  */
 -->
-<legend class="admin__form-field-legend">
+<label class="admin__form-field-label" attr="for: uid">
     <span text="label"/>
-</legend>
-<div class="admin__form-field" outereach="elems" render=""/>
+</label>
+<div class="admin__form-field-control" render="elementTmpl"/>
