JS-321: Remove margin for zoom buttons in fullscreen

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -450,8 +450,8 @@
     &:extend(.fotorama-sprite);
     background-position: 0 0;
     height: @size-fotorama-block;
-    right: 2px;
-    top: 2px;
+    right: 0;
+    top: 0;
     width: @size-fotorama-block;
     z-index: @z-index-10;
     display:  none;
