JS-324: Fix thumb-arrow tabindex

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -903,6 +903,7 @@
         width: @fotorama-thumb-arrow;
         z-index: @z-index-10;
         cursor: pointer;
+        box-shadow: none;
         .fotorama__thumb--icon {
             .fotorama-abs-center();
             width: 100%;
@@ -930,6 +931,7 @@
         position: absolute;
         right: 0;
         cursor: pointer;
+        box-shadow: none;
         z-index: @z-index-10;
         .fotorama__thumb--icon {
             .fotorama-rotate(90deg);
