MAGETWO-44467: Magento HTML templates basic format
- Add missing attributes
- Remove unnecessary template

--- a/app/code/Magento/Ui/view/base/web/templates/grid/columns/multiselect.html
+++ b/app/code/Magento/Ui/view/base/web/templates/grid/columns/multiselect.html
@@ -15,7 +15,7 @@
                 css: { '_indeterminate': indetermine },
                 enable: totalRecords">
         <label attr="for: ko.uid"/>
-        <button class="action-multicheck-toggle"
+        <button class="action-multicheck-toggle" data-toggle="dropdown"
             data-bind="css: { '_active': $collapsible.opened },
                        enable: totalRecords,
                        toggleCollapsible">
