--- a/app/code/Magento/Ui/view/base/web/templates/grid/filters/chips.html
+++ b/app/code/Magento/Ui/view/base/web/templates/grid/filters/chips.html
@@ -9,7 +9,7 @@
         <span class="admin__current-filters-title" translate="'Active filters\\:'"/>
     </div>
     <div class="admin__current-filters-list-wrap">
-        <ul class="admin__current-filters-list">
+        <ul class="admin__current-filters-list" data-role="filter-list">
             <each args="elems">
                 <li outereach="previews">
                     <span text="label + '\\:'"/>
